--- a/notes/issues/ts19-2.rst
+++ b/notes/issues/ts19-2.rst
@@ -33,8 +33,16 @@ Find some ordinary photons for machinery dev with non-problematics
 
     DsG4OpBoundaryProcess=ERROR CSteppingAction=ERROR CRandomEngine=ERROR ts 19 --pfx scan-ts-utail --mask 2 --pindex 0 --dbgseqhis 0xbbbbbbbbcd --pindexlog --recpoi --utaildebug --xanalytic --dbgflat --flatsigint -D
 
+    ## the --dbgseqhis 0xbbbbbbbbcd will do nothing as are running on an 0x8bd "TO BR SA" photon
 
 
+
+BLog Deviations within very simples histories would be highly useful 
+------------------------------------------------------------------------
+
+* added some more notes and cuts to the BLog and checked these simple ones for deviates
+* but did not get lucky with the above 10, BLog comparisons all agree 
+* problem with this approach is that are restricted to single photon running for the rtPrintf logging 
 
 
 Code
@@ -46,8 +54,19 @@ Code
 
 
 
-Backtraces for all 10 consumptions
------------------------------------
+Backtraces for all 10 consumptions, using --flatsigint 
+----------------------------------------------------------------------------------------------------------------------
+
+* --flatsigint raises SIGINT after the dbgFlat logging in CRandomEngine::dbgFlat
+
+
+
+G4SteppingManager::DefinePhysicalStepLength
+      triplet consumption (OpBoundary,OpRayleigh,OpAbsorption) equivalent to Opticks consumption from propagate_to_boundary 
+      deciding on winner process.  With "TO BR SA" there are two  
+
+
+
 
 ::
 
